force-app/main/default/objects/Weather_API_Request_Param__mdt/Weather_API_Request_Param__mdt.object-meta.xml
<CustomObject>
    <label>Weather API Request Param</label>
    <pluralLabel>Weather API Request Params</pluralLabel>
</CustomObject>