force-app/main/default/objects/Weather_API_Request_Param__mdt/fields/Entity_Definition__c.field-meta.xml
<CustomField>
    <fullName>Entity_Definition__c</fullName>
    <label>Entity Definition</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Weather_API_Request_Params</relationshipLabel>
    <relationshipName>Weather_API_Request_Params</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>