force-app/main/default/objects/Weather_API_Request_Param__mdt/fields/Field_Definition__c.field-meta.xml
<CustomField>
    <fullName>Field_Definition__c</fullName>
    <label>Field Definition</label>
    <metadataRelationshipControllingField>Weather_API_Request_Param__mdt.Entity_Definition__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>Weather_API_Request_Params</relationshipLabel>
    <relationshipName>Weather_API_Request_Params</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>