force-app/main/default/objects/Weather_API_Request_Param__mdt/fields/Param_Name__c.field-meta.xml
<CustomField>
    <fullName>Param_Name__c</fullName>
    <label>Param Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>