force-app/main/default/objects/Weather_API_Request_Param__mdt/fields/Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Request_Name__c</fullName>
    <label>Request Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Get Weather by City</fullName>
                <default>true</default>
                <label>Get Weather by City</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>