force-app/main/default/objects/Weather_API_Request_Param__mdt/fields/Weather_API__c.field-meta.xml
<CustomField>
    <fullName>Weather_API__c</fullName>
    <label>Weather API</label>
    <referenceTo>Weather_API__mdt</referenceTo>
    <relationshipLabel>Weather API Request Params</relationshipLabel>
    <relationshipName>Weather_API_Request_Params</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>